[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/Run.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/images/ui/arrow_left.png" type="Texture" id=2]
[ext_resource path="res://src/actors/WorldTileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scripts/ScreenAchievements.gd" type="Script" id=5]
[ext_resource path="res://src/actors/FadeTransition.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/actors/WindowAchievements.tscn" type="PackedScene" id=7]

[node name="Achievements" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldTileMap" parent="." instance=ExtResource( 3 )]

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 1 )
text = "TITLE_ACHIEVEMENTS"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 32.0
margin_right = 94.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 2 )
flat = true

[node name="WindowAchievements" parent="." instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -150.0
margin_right = 168.0
margin_bottom = 184.0

[node name="FadeTransition" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="animation_finished" from="FadeTransition" to="." method="_on_FadeTransition_animation_finished"]
